--- a/src/europe/download.Rmd
+++ b/src/europe/download.Rmd
@@ -121,18 +121,21 @@ hasCoordinate <- TRUE
 Trigger download:
 
 ```{r trigger_gbif_download_eu}
-# Important: query arguments need to be pasted as strings of format "key = value"
-gbif_download_key <- occ_download(
-  paste0("taxonKey = ", paste(taxon_keys, collapse = ",")), 
-  paste0("geometry within ", bounding_box_europe),
-  paste0("basisOfRecord = ", paste(basis_of_record, collapse = ",")),
-  paste0("year >= ", year_begin),
-  paste0("year <= ", year_end),
-  paste0("hasCoordinate = ", hasCoordinate),
-  user = rstudioapi::askForPassword("GBIF username"),
-  pwd = rstudioapi::askForPassword("GBIF password"),
-  email = rstudioapi::askForPassword("Email address for notification")
-)
+# Reuse existing download (comment to trigger new download)
+gbif_download_key <- "0004690-190415153152247"
+
+# Trigger new download (commented by default)
+# gbif_download_key <- occ_download(
+#   paste0("taxonKey = ", paste(taxon_keys, collapse = ",")), 
+#   paste0("geometry within ", bounding_box_europe),
+#   paste0("basisOfRecord = ", paste(basis_of_record, collapse = ",")),
+#   paste0("year >= ", year_begin),
+#   paste0("year <= ", year_end),
+#   paste0("hasCoordinate = ", hasCoordinate),
+#   user = rstudioapi::askForPassword("GBIF username"),
+#   pwd = rstudioapi::askForPassword("GBIF password"),
+#   email = rstudioapi::askForPassword("Email address for notification")
+# )
 ```
 
 ## Check status of download
