--- a/src/belgium/assign_grid.Rmd
+++ b/src/belgium/assign_grid.Rmd
@@ -49,7 +49,7 @@ table_name <- "occ_be"
 Open connection to database:
 
 ```{r open_connection_to_db}
-sqlite_occ <- dbConnect(SQLite(), dbname = sqlite_file)
+sqlite_occ <- dbConnect(SQLite(), dbname = sqlite_path)
 ```
 
 Retrieve geographic coordinates, `decimalLatitude` and `decimalLongitude` and coordinate uncertainty, `coordinateUncertaintyInMeters`:
