--- a/src/belgium/assign_grid.Rmd
+++ b/src/belgium/assign_grid.Rmd
@@ -222,6 +222,13 @@ Preview:
 geodata_df %>% head(n = 10)
 ```
 
+Before proceeding, we can delete the temporary file created at the beginning of this section:
+
+```{r delete_temp_file}
+file.remove(temp_file_coords)
+```
+
+
 ## Add grid cell code to sqlite file
 
 We can now add the column `eea_cell_code` to the table `occ_be` of sqlite file. We first create the new column `eaa_cell_code` in the table:
