--- a/src/europe/assign_grid.Rmd
+++ b/src/europe/assign_grid.Rmd
@@ -38,7 +38,7 @@ library(sp)             # To work with geospatial data
 We download the occurrences from GBIF, based on the key got in `download.Rmd`:
 
 ```{r get_occ_file_eu}
-key <- "0004690-190415153152247"
+key <- "0032154-190918142434337"
 zip_filename <- paste0(key, ".zip")
 if (!file.exists(here::here("data", "raw", zip_filename))) {
   occ <- occ_download_get(
@@ -399,7 +399,7 @@ Preview:
 geodata_df@data %>% head(n = 10)
 ```
 
-Where `x` and `y` are the new coordinates while in `@coords` we have the original coordinates:
+Where `x` and `y` are the new coordinates while in `@coords` we keep track of the original coordinates:
 
 ```{r preview_geodata_df_coords_occs_eu}
 geodata_df@coords[1:10,]
