Remove be in names tables
Similar to occ-cube repo

--- a/src/belgium/2_create_db.Rmd
+++ b/src/belgium/2_create_db.Rmd
@@ -91,7 +91,7 @@ sqlite_path <- here::here("data", "interim", sqlite_file)
 And table name:
 
 ```{r define_table_name}
-table_name <- "occ_be_all"
+table_name <- "occ_all"
 ```
 
 ### Define storage class for each column
@@ -280,10 +280,10 @@ issue_condition
 
 ## Create new table with filtered data
 
-New table name: `occ_be`
+New table name: `occ`
  
 ```{r new_table_name}
-table_name_subset <- "occ_be"
+table_name_subset <- "occ"
 ```
 
 We create the new table with selected columns and filtered data on `occurrenceStatus` and `issue`:
@@ -308,9 +308,9 @@ if (!table_name_subset %in% dbListTables(sqlite_occ)) {
 
 ## Overview and control filtered data table
 
-## Structure of `occ_be` table
+## Structure of `occ` table
 
-Check whether the table `occ_be` has been made:
+Check whether the table `occ` has been made:
 
 ```{r check_new_table}
 table_name_subset %in% dbListTables(sqlite_occ)
@@ -396,7 +396,7 @@ any(map_lgl(issues_to_discard,
             }))
 ```
 
-Overview of alll indexes present on `occ_be`:
+Overview of alll indexes present on `occ`:
 
 ```{r index_filtered_table}
 query <- glue_sql(
